--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://aquatic-network.instatus.com/">
+    <meta http-equiv="refresh" content="0;url=https://aquatic.instatus.com/">
     <title>Status Aquatic Network</title>
 </head>
 <body></body>
